--- a/README.rm
+++ b/README.rm
@@ -1,3 +1,3 @@
 
-Nombre Estudiante:
-Correo Electrónico del estudiante: 
+Nombre Estudiante: Bryan Cortine Pertuz
+Correo Electrónico del estudiante: Bryamcortine17@gmail.com
